welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:2: error: identifier expected but integer literal found.
while(estFaceMur:Boolean==0){
                          ^Program:7: error: ')' expected but '}' found.
	}
        ^