welcome.lessons.welcome.loopwhile.LoopWhile.scala.code
while(estFaceMur:Boolean==0){
	avance()
}
